# asst-cam-software

./: .readthedocs.yaml  .release  CHANGELOG.rst  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  installLely.sh  pyproject.toml  requirements.txt  startVirtualCANInterface.sh
.github/: CODEOWNERS
.github/workflows/: asst-ci.yml
docs/: component_manager_api.rst  conf.py  dev_practices.rst  getting_started.rst  how_to.rst  how_to_install.rst  index.rst  usage.rst
docs/_build/: component_manager_api.html  genindex.html  how_to.html  how_to_deploy.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: component_manager_api.doctree  environment.pickle  how_to.doctree  how_to_deploy.doctree  index.doctree
docs/_build/.doctrees/gui/: index.doctree  src.astt_gui.doctree
docs/_build/.doctrees/software/: dish_modes.doctree  index.doctree  sources.doctree  start_simulator.doctree
docs/_build/_modules/: index.html  threading_lrc.html
docs/_build/_sources/: how_to_deploy.rst.txt  index.rst.txt
docs/_build/_sources/gui/: index.rst.txt
docs/_build/_sources/software/: sources.rst.txt
docs/_build/doctrees/: astt_comp_manager.doctree  dish_modes.doctree  environment.pickle  how_to.doctree  index.doctree  modules.doctree  sources.doctree  src.astt_gui.doctree  src.doctree  start_simulator.doctree
docs/_build/doctrees/gui/: index.doctree  src.astt_gui.doctree
docs/_build/doctrees/software/: dish_modes.doctree  index.doctree  sources.doctree  start_simulator.doctree
docs/_build/gui/: index.html  src.astt_gui.html
docs/_build/html/: .buildinfo  astt_comp_manager.html  dish_modes.html  genindex.html  how_to.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sources.html  src.astt_gui.html  src.html  start_simulator.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: astt_comp_manager.rst.txt  dish_modes.rst.txt  index.rst.txt  modules.rst.txt  src.astt_gui.rst.txt  src.rst.txt  start_simulator.rst.txt
docs/_build/html/gui/: index.html  src.astt_gui.html
docs/_build/html/software/: dish_modes.html  index.html  sources.html  start_simulator.html
docs/_build/software/: dish_modes.html  index.html  sources.html  start_simulator.html
docs/gui/: index.rst  src.astt_gui.rst
docs/software/: index.rst  start_simulator.rst
elk-logging/: docker-compose.yaml
elk-logging/logstash/pipeline/: logstash.conf
src/: __init__.py  source.py  threading_lrc.py
src/GUI/: index.html  script.js
src/antenna_simulator/: AntennaSimulate.cpp  AntennaSimulate.h  PidController.cpp  PidController.h  TerminalColors.h  compileSlave.sh  cpp-slave.eds  main.cpp  master.cpp  slave.cpp
src/astt_gui/: app.py  check.py
src/astt_gui/static/css/: remixicon.css  style.css  tooltip_style.css
src/astt_gui/templates/: index.html
src/canopen-simulator/: AntennaSimulate.cpp  AntennaSimulate.h  compileMaster.sh  compileSlave.sh  cpp-tutorial.yml  master  master.cpp  master.dcf  slave  slave.cpp  startCO.sh
src/component_managers/: __init__ .py  asst_comp_manager.py  astt_comp_manager.py  cpp-slave.eds  dish_modes.py  plc_comp_manager.py  sources.py  start_simulator.py  startup_simulator.py
src/component_managers/docs/: modules.rst
tests/: __init__.py  conftest.py  test_antenna_simulator.py  test_initialization_unhappy_path.py
tests/acceptance/: __init__.py  test_antenna_simulator.py  test_initial_modes_and_states.py  test_logger.py  test_mode_transitions.py  test_modes_and_states.py  test_pointing_with_input.py
tests/unit/: test_az_el_limits.py  test_mode_functions.py  test_mode_state_enum_gen.py  test_modes.py  test_point_to_coordinates.py  test_pointing.py  test_sources.py  test_track_sun.py
(+15 files in other folders)
