[tool.poetry]
name = "astt-cam-software"
version = "0.0.1"
license = "MIT license"
readme = 'README.md'
description = "A GIT's project to build a telescope."
authors = [
    "Abednigo Lethole",
    "Lebogang Lekganyane",
    "Phelokazi Dube",
    "Umkhulu Sirele",
    "Surprise sithole",
    "Prudence Baloyi",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "component_managers", from = "src" }
]
include = [
    { path = 'tests'},
]


[tool.poetry.dependencies]
python = "^3.8"
assertpy = "^1.1"


[tool.poetry.dev-dependencies]
black="24.1.1"
canopen="2.2.0"
ipython="8.12.3"
isort="5.13.2"
flake8="5.0.4"
pylint="3.0.3"
pynmeagps="1.0.33"
pyserial="3.5"
pytest="8.0.0"
bidict="0.22.1"
cachelib="0.11.0"
click="8.1.7"
Flask="3.0.2"
Flask-Login="0.6.3"
Flask-Session="0.6.0"
Flask-SocketIO="5.3.6"
importlib-metadata="7.0.1"
itsdangerous="2.1.2"
Jinja2="3.1.3"
MarkupSafe="2.1.5"
python-engineio="4.9.0"
python-socketio="5.11.1"
six="1.16.0"
Werkzeug="3.0.1"
zipp="3.17.0"
astropy="5.2.2"
setuptools="45.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "5.1.1"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"